Added folder structure

--- a/install_resources/makepkg.conf
+++ b/install_resources/makepkg.conf
@@ -2,7 +2,7 @@
 #
 # /etc/makepkg.conf
 #
-# 	MADE BY ARCHSCRIPT
+# 	COPIED BY ARCHSCRIPT
 
 #########################################################################
 # SOURCE ACQUISITION
