--- a/install_resources/pacman.conf
+++ b/install_resources/pacman.conf
@@ -1,4 +1,5 @@
 # FILE SOURCED FROM A 2021 REPO
+# COPIED BY ARCHSCRIPTS
 # BACKUP OF DEFAULT FILE AT /etc/pacman.conf.backup
 #
 # /etc/pacman.conf
